[package]
name = "jiffy"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dependencies]
crossbeam = "0.8.1"
flume = "0.10.12"
riffy = { git = "https://github.com/s1ck/riffy" }
seize = "0.2.1"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"
# mimalloc = {version="0.1.28", default-features = false}

[profile.release]
debug = true
lto = true
# codegen-units = 1
